fix(explorer): correct width property for folder container on mobile

--- a/quartz/components/styles/explorer.scss
+++ b/quartz/components/styles/explorer.scss
@@ -249,11 +249,7 @@ li:has(> .folder-outer:not(.open)) > .folder-container > svg {
       margin-top: 0;
       background-color: var(--light);
       max-width: 100vw;
-<<<<<<< HEAD
-      width: 100%;
-=======
       width: 100vw;
->>>>>>> upstream/v4
       transform: translateX(-100vw);
       transition:
         transform 200ms ease,
